cmake_minimum_required(VERSION 4.0)
project(course_cpp_basics)

set(CMAKE_CXX_STANDARD 20)

add_executable(FirstProgram getting-started/main.cpp)

add_executable(CarpetCleaning Variables-and-Constants/main.cpp)

add_executable(Vectors Vectors-and-2D-Vectors/main.cpp)

add_executable(Change Statements-and-Operators/main.cpp)
add_executable(Control_Flow Control-Flow/main.cpp)
add_executable(Cipher Cipher/main.cpp)
